--- a/packages.html
+++ b/packages.html
@@ -89,7 +89,7 @@
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Beer.html">
-                            <img src="images/beer-mini.jpg" alt="Пиво" class="img-fluid" />
+                            <img src="images/beer-mini.jpg" alt="Beer" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
                     </div>
@@ -114,7 +114,7 @@
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Turkey.html">
-                            <img src="images/Turkey-mini.jpg" alt="" class="img-fluid" />
+                            <img src="images/Turkey-mini.jpg" alt="Turkey" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>190</span><span class="fa fa-usd"></span></p>
                     </div>
@@ -135,7 +135,7 @@
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">
-                            <img src="images/Odessa-mini.jpg" alt="" class="img-fluid" />
+                            <img src="images/Odessa-mini.jpg" alt="Odessa" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>2100грн.</span></p>
                     </div>
@@ -154,7 +154,7 @@
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Limonariy.html">
-                            <img src="images/Limonariy-mini.jpg" alt="Лимонарий" class="img-fluid" />
+                            <img src="images/Limonariy-mini.jpg" alt="Limonariy" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>230грн.</span></p>
                     </div>
@@ -223,7 +223,7 @@
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Karpati.html">
-                            <img src="images/karpati-mini.jpg" alt="LOL" class="img-fluid" />
+                            <img src="images/Karpati-mini.jpg" alt="Karpati" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>2400грн.</span></p>
                     </div>
@@ -246,7 +246,7 @@
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-eight-march.html">
-                            <img src="images/eight-march-mini.jpg" alt="LOL" class="img-fluid" />
+                            <img src="images/eight-march-mini.jpg" alt="eight-march" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
                     </div>
