--- a/packages.html
+++ b/packages.html
@@ -223,7 +223,7 @@
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Karpati.html">
-                            <img src="images/Karpati-mini.jpg" alt="Karpati" class="img-fluid" />
+                            <img src="images/karpati-mini.jpg" alt="Karpati" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>2400грн.</span></p>
                     </div>
