--- a/packages.html
+++ b/packages.html
@@ -131,7 +131,7 @@
                 </div>
                 <!--  //Турция  -->
 
-                <!--  Полтава -->
+                <!--  Одесса -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">
@@ -142,13 +142,13 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Одесса, Украина.</h6>
                         <h5 class="my-2"><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">Одесса</a></h5>
-                        <p class="">Одесса на 8 марта. Морской привет!</p>
+                        <p class="">Одесса на 8 марта, юмор и колорит. Морской привет!</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Полтава  -->
+                <!--  //Одесса  -->
 
                 <!--  Лимонарий   -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
@@ -234,7 +234,7 @@
                                 Карпаты
                             </a>
                         </h5>
-                        <p class=""> Походы в Карпаты с комфортом...</p>
+                        <p class=""> Походы в Карпаты с комфортом. Расписание походов...</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span></li>
                         </ul>
