--- a/about.html
+++ b/about.html
@@ -248,8 +248,7 @@
                                 </li>
                             </ul>
                             <ul class="col-6 links">
-                                <li><a href="https://novi-povorot.pp.ua/page-Limonariy.html"
-                                        class="scroll">Лимонарий</a></li>
+                                <li><a href="https://novi-povorot.pp.ua/page-Limonariy.html" class="scroll">Лимонарий</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a>
                                 </li>
