--- a/page-Beer.html
+++ b/page-Beer.html
@@ -309,7 +309,7 @@
                             <ul class="col-6 links">
                                 <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Poltava.html" class="scroll">Полтава</a>
+                                <li><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html" class="scroll">Одесса</a>
                                 </li>
                                 <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a>
                                 </li>
