--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -320,14 +320,11 @@
                             <ul class="col-6 links">
                                 <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html" class="scroll">Одесса</a>
-                                </li>
-                                <li><a href="page-Karpati.html" class="scroll">Карпаты</a>
-                                </li>
+                                <li><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html" class="scroll">Одесса</a></li>
+                                <li><a href="page-Karpati.html" class="scroll">Карпаты</a></li>
                             </ul>
                             <ul class="col-6 links">
-                                <li><a href="https://novipovorot.pp.ua/page-Limonariy.html"
-                                        class="scroll">Лимонарий</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Limonariy.html" class="scroll">Лимонарий</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a>
                                 </li>
