--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -516,7 +516,7 @@
                                 <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html" class="scroll">Одесса</a>
                                 </li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a>
+                                <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a>
                                 </li>
                             </ul>
                             <ul class="col-6 links">
