--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Turkey.html"> Походы по Турции</a>
                         </h5>
-                        <p class="">Расписание походов по Турции...</p>
+                        <p class="">Мраморное и Средиземное море, горы Улудаг, Ликийская тропа...</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>8 Дней</span></li>
                         </ul>
@@ -330,7 +330,7 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Одесса, Украина.</h6>
                         <h5 class="my-2"><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">Одесса</a></h5>
-                        <p class="">Одесса на 8 марта. Морской привет!</p>
+                        <p class="">Одесса на 8 марта, юмор и колорит. Морской привет!</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
                         </ul>
