--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -81,10 +81,10 @@
             <div class="row">
 
                 <div class="col-lg-4 main-title-text">
-                    <h3 class="title">Пиво</h3>
+                    <h3 class="title">Кофе</h3>
                 </div>
                 <div class="col-lg-8 blog-left-sub">
-                    <img src="images/beer-max.jpg" alt="news image" class="img-fluid">
+                    <img src="images/cofe-max.jpg" alt="news image" class="img-fluid">
                     <div class="blog-two-two">
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
