--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -3,17 +3,17 @@
 <html lang="ru">
 
 <head>
-    <title>Пиво | Новый поворот | Экскурсия и дегустация в частную пивоварню </title>
+    <title>Кофе Исла | Новый поворот | Экскурсия и дегустация кофе Исла </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Экскурсия и дегустация в частную пивоварню, тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net, Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
-    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Экскурсия и дегустация в частную пивоварню, Пиво_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Экскурсия и дегустация кофе Исла, тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net, Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
+    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Экскурсия и дегустация кофе Исла, Пиво_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
     <!-- Open Graph data-->
     <meta property="og:title" content="Пиво">
-    <meta property="og:description" content="Экскурсия и дегустация в частную пивоварню!"/>
+    <meta property="og:description" content="Экскурсия и дегустация кофе Исла!"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://novipovorot.pp.ua/page-Beer.html"/>
-    <meta property="og:image" content="images/beer-max.jpg">
+    <meta property="og:url" content="https://novipovorot.pp.ua/page-cofe-Isla.html"/>
+    <meta property="og:image" content="images/cofe-max.jpg">
     <!--End Open Graph data-->
 
     <script>
