--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -95,7 +95,7 @@
                             </ul>
                         </div>
                         <h4 class="mb-3">
-                            Экскурсия и дегустация в частную пивоварню
+                            Экскурсия и дегустация кофе Исла
                         </h4>
                         <p class="txt-alg-jf">
                             Вишневое, травяное, облепихово-медовое,
@@ -107,10 +107,10 @@
                             пива под аккомпанемент мясной и рыбной закуски!
                         </p>
                         <hr>
-                        <div class="alert alert-danger mt-3">
+                        <div class="alert alert-warning mt-3">
                             <!--<button type="button" class="close" data-dismiss="alert">&times;</button>-->
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br /> <span
-                                class="badge badge-danger"><b>18+</b></span> Количество мест ограничено!
+                              Количество мест ограничено!
                             Запись уже открыта!
                         </div>
                         <ul class="listing">
