--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -109,9 +109,9 @@
                         <hr>
                         <div class="alert alert-warning mt-3">
                             <!--<button type="button" class="close" data-dismiss="alert">&times;</button>-->
-                            <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br /> <span
+                            <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br /> <span>
                               Количество мест ограничено!
-                            Запись уже открыта!
+                            Запись уже открыта!</span>
                         </div>
                         <ul class="listing">
                             <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>195 Грн.</span></li>
