--- a/packages.html
+++ b/packages.html
@@ -85,6 +85,31 @@
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
 
+                <!--  Кофе -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                      <!--  <a href="https://novipovorot.pp.ua/page-Beer.html"> -->
+                            <img src="images/cofe-mini.jpg" alt="Beer" class="img-fluid" />
+                       <!-- </a> -->
+                        <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+                        <h5 class="my-2">
+                           <!-- <a href="https://novipovorot.pp.ua/page-Beer.html">-->
+                                Кофе Isla
+                           <!-- </a>-->
+                        </h5>
+                        <p class="">
+                            Экскурсия и дегустация кофе Isla
+                        </p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Кофе -->
+
                 <!--  Пиво -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
