--- a/packages.html
+++ b/packages.html
@@ -101,7 +101,7 @@
                            <!-- </a>-->
                         </h5>
                         <p class="">
-                            Экскурсия и дегустация кофе Isla
+                           50 оттенков кофе Isla. Экскурсия и дегустация...
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
