--- a/packages.html
+++ b/packages.html
@@ -91,7 +91,7 @@
                       <!--  <a href="https://novipovorot.pp.ua/page-Beer.html"> -->
                             <img src="images/cofe-mini.jpg" alt="Beer" class="img-fluid" />
                        <!-- </a> -->
-                        <p><span class="fa fa-tags"></span> <span>- грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
