--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -76,13 +76,14 @@
         </div>
     </section>
     <!-- //banner -->
-<!--single page-->
+
+    <!--single page-->
     <section class="single page py-lg-4 py-md-3 py-sm-3 py-3" id="single-page">
         <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
             <div class="row">
 
                 <div class="col-lg-4 main-title-text">
-                    <h3 class="title">Кофе</h3>
+                    <h3 class="title">50 оттенков кофе</h3>
                 </div>
                 <div class="col-lg-8 blog-left-sub">
                     <img src="images/cofe-max.jpg" alt="news image" class="img-fluid">
@@ -90,13 +91,13 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>14 и 23 Февраля 2021
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>9 Марта 2021
                                         Года</span>
                                 </li>
                             </ul>
                         </div>
                         <h4 class="mb-3">
-                            Экскурсия и дегустация кофе Исла
+                           Кофе Isla. Экскурсия с вкуснейшее дегустацией...
                         </h4>
                         <p class="txt-alg-jf">
                             Вишневое, травяное, облепихово-медовое,
