--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -100,19 +100,14 @@
                            Кофе Isla. Экскурсия с вкуснейшее дегустацией...
                         </h4>
                         <p class="txt-alg-jf">
-                            Вишневое, травяное, облепихово-медовое,
-                            терново-медовое, фирменное светлое и темное пиво!
-                            Вкуснейшее пиво на частной пивоварне! Мы узнаем
-                            как проходит процесс создания этих пивных шедевров.
-                            Побываем на экскурсии в самой пивоварне, а после
-                            продегустируем 6 видов вкуснейшего натурального
-                            пива под аккомпанемент мясной и рыбной закуски!
+                            Ароматный, манящий и бесконечно вкусный запах кофе, если Вы Кофеман, это ваш день!
+Экскурсия в настоящий Мир кофе, от зеленых зернышек до самого вкусного напитка дня! 
                         </p>
                         <hr>
                         <div class="alert alert-warning mt-3">
                             <!--<button type="button" class="close" data-dismiss="alert">&times;</button>-->
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br /> <span>
-                              Количество мест ограничено!
+                             Поспешите бронировать, количество мест ограничено!
                             Запись уже открыта!</span>
                         </div>
                         <ul class="listing">
@@ -176,23 +171,21 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
                                         <p>
-                                            <b>17:50</b> - сбор группы и после минутки
-                                            позитива пешая прогулка до места начала
-                                            экскурсии!
+                                            <b>12:30</b> - сбор группы, после минутки позитива пешая прогулка до места начала экскурсии! Участие по предварительной записи и предоплате 50%!
                                         </p>
                                         <p><b>18:00 - 18:40</b> - экскурсия
                                             по частной пивоварне. Мы увидим варочный
                                             и бродильный цеха, почувствуем дух хмеля
                                             и солода. Узнаем секреты ручной варки пива!</p>
-                                        <p><b>18:40-19:15</b> дегустация 6 видов
-                                            вкуснейшего натурального пива. Сваренного
-                                            на уже полюбившейся пивоварне: травяное,
-                                            пшеничное, облепихово-медовое, синяя
-                                            борода (сухой стаут) и конечно фирменное
-                                            светлое и темное пиво! Под закуску из
-                                            балыка из карпа, бастурмы, сыровяленой
-                                            колбаски и вяленого мяса вы ощутите весь
-                                            аромат и вкус самого лучшего пива!</p><br />
+                                        <p><b>12:40 - 14:40</b> 
+                                          Мы увидим весь "путь кофе" от зеленых зернышек, до ароматного напитка. 
+Услышим рассказ местного экскурсовода о   видах кофе и вариациях его приготовления , тонкостях кофейного искусства! 
+Мы продегустируем вкуснейший кофе: американо, эспрессо,  капучино... 
+                                        </p>
+<p>
+Бодрые и в отличном настроении купим самый вкусный кофе друзьям и родственникам
+</p>
+    <br />
                                         <hr />
                                         <p>
                                             <i> *По окончании экскурсии и дегустации
