--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -183,7 +183,7 @@
 Мы продегустируем вкуснейший кофе: американо, эспрессо,  капучино... 
                                         </p>
 <p>
-Бодрые и в отличном настроении купим самый вкусный кофе друзьям и родственникам
+Бодрые и в отличном настроении купим самый вкусный кофе друзьям и родственникам <span style="color: red;" class="fa fa-heart"></span>
 </p>
     <br />
                                         <hr />
