--- a/packages.html
+++ b/packages.html
@@ -88,17 +88,17 @@
                 <!--  Кофе -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                      <!--  <a href="https://novipovorot.pp.ua/page-Beer.html"> -->
+                      <a href="https://novipovorot.pp.ua/page-cofe-Isla.html">
                             <img src="images/cofe-mini.jpg" alt="Beer" class="img-fluid" />
-                       <!-- </a> -->
+                       </a>
                         <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
                         <h5 class="my-2">
-                           <!-- <a href="https://novipovorot.pp.ua/page-Beer.html">-->
+                           <a href="https://novipovorot.pp.ua/page-cofe-Isla.html">
                                 Кофе Isla
-                           <!-- </a>-->
+                           </a>
                         </h5>
                         <p class="">
                            50 оттенков кофе Isla. Экскурсия и дегустация...
