--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -83,7 +83,7 @@
             <div class="row">
 
                 <div class="col-lg-4 main-title-text">
-                    <h3 class="title">50 оттенков кофе</h3>
+                    <h3 class="title">50 оттенков кофе Isla</h3>
                 </div>
                 <div class="col-lg-8 blog-left-sub">
                     <img src="images/cofe-max.jpg" alt="news image" class="img-fluid">
