--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -9,8 +9,8 @@
     <meta name="description" content="Туры выходного дня 'Новый поворот', Экскурсия и дегустация кофе Исла, тел.: 0985771579, 0506702264, почта: dovgalyv@ukr.net, Путешествуйте с улыбкой! Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы | Экскурсии выходного дня | Афиша Запорожье | Как провести выходные | Незабываемый отдых">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Экскурсия и дегустация кофе Исла, Пиво_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
     <!-- Open Graph data-->
-    <meta property="og:title" content="Кофе Исла">
-    <meta property="og:description" content="Экскурсия и дегустация кофе Исла!"/>
+    <meta property="og:title" content="Кофе Isla">
+    <meta property="og:description" content="Экскурсия и дегустация кофе Isla!"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/page-cofe-Isla.html"/>
     <meta property="og:image" content="images/cofe-max.jpg">
