--- a/booking.html
+++ b/booking.html
@@ -129,6 +129,7 @@
                                     <option>Карпаты</option>
                                     <option>Букет К 8 Марта</option>
                                     <option>Стамбул Столица Тюльпанов</option>
+                                    <option>50 Оттенков Кофе Isla</option>
                                 </select>
                             </div>
                             <div class="col-md-12 form-group contact-forms">
