--- a/booking.html
+++ b/booking.html
@@ -120,7 +120,7 @@
                             <div class="col-md-12 form-group contact-forms">
                                 <select name="Тур" class="form-control" id="#">
                                     <option>Тур</option>
-                                    <option>Полтава</option>
+                                    <option>Одесса</option>
                                     <option>Лимонарий</option>
                                     <option>Пиво</option>
                                     <option>ЛОЛ</option>
