--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -97,7 +97,7 @@
                             </ul>
                         </div>
                         <h4 class="mb-3">
-                           Кофе Isla. Экскурсия с вкуснейшее дегустацией...
+                           Кофе Isla. Экскурсия с вкуснейшей дегустацией...
                         </h4>
                         <p class="txt-alg-jf">
                             Ароматный, манящий и бесконечно вкусный запах кофе, если Вы Кофеман, это ваш день!
