--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-    <title>Новый поворот</title>
+    <title>Контакты | Новый поворот</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="keywords" content="Туры выходного дня 'Новый поворот'" />
