--- a/packages.html
+++ b/packages.html
@@ -148,7 +148,7 @@
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Turkey.html"> Походы по Турции</a>
                         </h5>
-                        <p class="">Мраморное и Средиземное море, горы Улудаг, Ликийская тропа...</p>
+                        <p class="">Мраморное и Средиземное море...</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>8 Дней</span></li>
                         </ul>
@@ -259,7 +259,7 @@
                                 Карпаты
                             </a>
                         </h5>
-                        <p class=""> Походы в Карпаты с комфортом. Расписание походов...</p>
+                        <p class=""> Походы в Карпаты с комфортом...</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span></li>
                         </ul>
@@ -302,7 +302,7 @@
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Стамбул, Турция.</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Stambul.html">
-                                Стамбул столица тюльпанов
+                                Стамбул
                             </a>
                         </h5>
                         <p class="">
