--- a/about.html
+++ b/about.html
@@ -208,7 +208,7 @@
                             <p>Путешествуйте с улыбкой. С любовью Новый поворот!</p>
                         </div>
                         <ul class="social_section_1info">
-                            <li class="mb-2 facebook"><a href="https://www.facebook.com/groups/novipovorot/"><span
+                            <li class="mb-2 facebook"><a href="https://www.facebook.com/284598912231286/"><span
                                         class="fa fa-facebook"></span></a></li>
                             <li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span
                                         class="fa fa-instagram"></span></a></li>
