--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -140,7 +140,7 @@
                         <p>
                             Присоединяйтесь к сообществу в социальных сетях:
                         <ul class="social_section_1info mt-1 mb-1">
-                            <li class="mb-2 facebook"><a href="https://www.facebook.com/groups/novipovorot/"><span
+                            <li class="mb-2 facebook"><a href="https://www.facebook.com/284598912231286/"><span
                                         class="fa fa-facebook"></span></a></li>
                             <li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span
                                         class="fa fa-instagram"></span></a></li>
@@ -286,7 +286,7 @@
                             <p>Путешествуйте с улыбкой. С любовью Новый поворот!</p>
                         </div>
                         <ul class="social_section_1info">
-                            <li class="mb-2 facebook"><a href="https://www.facebook.com/groups/novipovorot/"><span
+                            <li class="mb-2 facebook"><a href="https://www.facebook.com/284598912231286/"><span
                                         class="fa fa-facebook"></span></a></li>
                             <li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span
                                         class="fa fa-instagram"></span></a></li>
