--- a/page-Odessa-on-march.html
+++ b/page-Odessa-on-march.html
@@ -136,7 +136,7 @@
                             Присоединяйтесь к сообществу в социальных сетях:
 
                         <ul class="social_section_1info mt-1 mb-1">
-                            <li class="mb-2 facebook"><a href="https://www.facebook.com/groups/novipovorot/"><span
+                            <li class="mb-2 facebook"><a href="https://www.facebook.com/284598912231286/"><span
                                         class="fa fa-facebook"></span></a></li>
                             <li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span
                                         class="fa fa-instagram"></span></a></li>
@@ -311,7 +311,7 @@
                             <p>Путешествуйте с улыбкой. С любовью Новый поворот!</p>
                         </div>
                         <ul class="social_section_1info">
-                            <li class="mb-2 facebook"><a href="https://www.facebook.com/groups/novipovorot/"><span
+                            <li class="mb-2 facebook"><a href="https://www.facebook.com/284598912231286/"><span
                                         class="fa fa-facebook"></span></a></li>
                             <li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span
                                         class="fa fa-instagram"></span></a></li>
