--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                             <form action="https://novipovorot.us7.list-manage.com/subscribe/post?u=325c75dce90af10f77da58955&amp;id=2af7a2a416" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                 <div id="mc_embed_signup_scroll">
                                     <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Введите адрес электронной почты..." required>
-                                    <input type="text" name="b_325c75dce90af10f77da58955_2af7a2a416" tabindex="-1" value="">
+                                   <!-- <input type="text" name="b_325c75dce90af10f77da58955_2af7a2a416" tabindex="-1" value="">-->
 
                                         <button class="btn1" id="mc-embedded-subscribe"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
                                         <div class="clearfix"> </div>
