--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -330,7 +330,7 @@
                                 </li>
                             </ul>
                         </div>
-                    </div>
+                    </div><!--
                     <div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
                         <div class="footer-title">
                             <h3>Новостная рассылка</h3>
@@ -347,7 +347,31 @@
                                 <div class="clearfix"> </div>
                             </form>
                         </div>
+                    </div>-->
+                    <!-- Begin Mailchimp Signup Form -->
+                     <div id="mc_embed_signup" class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
+                        <div class="footer-title">
+                            <h3>Новостная рассылка</h3>
+                        </div>
+                        <div class="footer-text">
+                            <p>
+                                Подписавшись на нашу рассылку, вы всегда будете получать от нас последние новости и
+                                обновления.
+                            </p>
+
+                            <form action="https://novipovorot.us7.list-manage.com/subscribe/post?u=325c75dce90af10f77da58955&amp;id=2af7a2a416" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                                <div id="mc_embed_signup_scroll">
+                                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Введите адрес электронной почты..." required>
+                                   <!-- <input type="text" name="b_325c75dce90af10f77da58955_2af7a2a416" tabindex="-1" value="">-->
+
+                                        <button class="btn1" id="mc-embedded-subscribe"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
+                                        <div class="clearfix"> </div>
+                                </div>	
+                            </form>
+                        </div>
+
                     </div>
+                    <!--End mc_embed_signup-->
                 </div>
             </div>
         </section>
