--- a/about.html
+++ b/about.html
@@ -32,6 +32,9 @@
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
     <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
     <!-- //css files -->
+    <!-- owl-carousel -->
+    <link href="/libs/owl-carousel/owl.carousel.min.css" rel="stylesheet">
+    <!-- //owl-carousel -->
     <!-- aos.css files -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- //aos.css files -->
