--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
     <!-- //css files -->
     <!-- owl-carousel -->
-    <link href="/libs/owl-carousel/owl.carousel.min.css" rel="stylesheet">
+    <link href="./libs/owl-carousel/owl.carousel.min.css" rel="stylesheet">
     <!-- //owl-carousel -->
     <!-- aos.css files -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -323,7 +323,10 @@
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-
+    
+    <!-- owl-carousel -->
+    <script src="./libs/owl-carousel/owl.carousel.min.js"></script>
+    <!-- //owl-carousel -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init({
