--- a/about.html
+++ b/about.html
@@ -177,9 +177,21 @@
     <!-- testimonials -->
     <section class="testimonials py-5" id="testi">
         <div class="container py-lg-5 py-md-3">
-            <h3 class="heading text-capitalize text-center mb-lg-5 mb-4" data-aos="zoom-in">Что Говорят Наши Клиенты
+            <h3 class="heading text-capitalize text-center mb-lg-5 mb-4" data-aos="zoom-in">
+               Что Говорят Наши Клиенты
             </h3>
             <div class="row pt-xl-4">
+               <!-- owl-carousel -->
+               <div class="owl-carousel owl-theme">
+                  <div> Your Content </div>
+                  <div> Your Content </div>
+                  <div> Your Content </div>
+                  <div> Your Content </div>
+                  <div> Your Content </div>
+                  <div> Your Content </div>
+                  <div> Your Content </div>
+               </div>
+               <!-- //owl-carousel -->
                <div id="wpac-review" style="width:90%; margin: 0 auto;"></div>
             </div>
         </div>
