--- a/about.html
+++ b/about.html
@@ -33,7 +33,8 @@
     <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
     <!-- //css files -->
     <!-- owl-carousel -->
-    <link href="./libs/owl-carousel/owl.carousel.min.css" rel="stylesheet">
+    <link href="./libs/owl-carousel/owl.carousel.min.css" rel="stylesheet" type='text/css' />
+    <link href="./libs/owl-carousel/owl.theme.default.min.css" rel="stylesheet" type='text/css' />
     <!-- //owl-carousel -->
     <!-- aos.css files -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
