--- a/about.html
+++ b/about.html
@@ -183,7 +183,7 @@
             </h3>
             <div class="row pt-xl-4">
                <!-- owl-carousel -->
-               <div class="owl-carousel owl-theme">
+               <div class="owl-carousel owl-theme" style="width:90%; margin: 0 auto;">
                   <div> Your Content </div>
                   <div> Your Content </div>
                   <div> Your Content </div>
