--- a/about.html
+++ b/about.html
@@ -184,13 +184,36 @@
             <div class="row pt-xl-4">
                <!-- owl-carousel -->
                <div class="owl-carousel owl-theme" style="width:90%; margin: 0 auto;">
-                  <div> Your Content </div>
-                  <div> Your Content </div>
-                  <div> Your Content </div>
-                  <div> Your Content </div>
-                  <div> Your Content </div>
-                  <div> Your Content </div>
-                  <div> Your Content </div>
+                  <div>
+                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                  </div>
                </div>
                <!-- //owl-carousel -->
                <div id="wpac-review" style="width:90%; margin: 0 auto;"></div>
