--- a/about.html
+++ b/about.html
@@ -183,7 +183,7 @@
             </h3>
             <div class="row pt-xl-4">
                <!-- owl-carousel -->
-               <div class="owl-carousel owl-theme" style="width:90%; margin: 0 auto;">
+               <div class="owl-carousel owl-theme" style="width:90%; margin: 0 auto; padding-bottom: 10px;">
                   <div>
                     <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
                   </div>
