--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-    <title>Туры выходного дня - Новый Поворот</title>
+    <title>Туры выходного дня - Новый Поворот | Экскурсии | Походы | Мастер-классы</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот', экскурсии, путешевствия, походы, мастер-классы, дегустации" />
