--- a/about.html
+++ b/about.html
@@ -185,19 +185,19 @@
                <!-- owl-carousel -->
                <div class="owl-carousel owl-theme" style="width:90%; margin: 0 auto; padding-bottom: 30px;">
                   <div>
-                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-1.jpg" alt="" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                    <img src=" /images/feedback/feedback-2.jpg " alt="" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-3.jpg" alt="" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-4.jpg" alt="" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-5.jpg" alt="" class="img-fluid abt-image" />
                   </div>
                   <div>
                     <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
