--- a/about.html
+++ b/about.html
@@ -200,19 +200,25 @@
                     <img src="/images/feedback/feedback-5.jpg" alt="" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-6.jpg" alt="" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-7.jpg" alt="" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-8.jpg" alt="" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-9.jpg" alt="" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-10.jpg" alt="" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="/images/feedback/feedback-11.jpg" alt="" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="/images/feedback/feedback-12.jpg" alt="" class="img-fluid abt-image" />
                   </div>
                </div>
                <!-- //owl-carousel -->
