--- a/about.html
+++ b/about.html
@@ -185,40 +185,55 @@
                <!-- owl-carousel -->
                <div class="owl-carousel owl-theme" style="width:90%; margin: 0 auto; padding-bottom: 30px;">
                   <div>
-                    <img src="/images/feedback/feedback-1.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-1.jpg" alt="feedback" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src=" /images/feedback/feedback-2.jpg " alt="" class="img-fluid abt-image" />
+                    <img src=" /images/feedback/feedback-2.jpg " alt="feedback" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/feedback/feedback-3.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-3.jpg" alt="feedback" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/feedback/feedback-4.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-4.jpg" alt="feedback" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/feedback/feedback-5.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-5.jpg" alt="feedback" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/feedback/feedback-6.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-6.jpg" alt="feedback" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/feedback/feedback-7.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-7.jpg" alt="feedback" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/feedback/feedback-8.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-8.jpg" alt="feedback" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/feedback/feedback-9.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-9.jpg" alt="feedback" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/feedback/feedback-10.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-10.jpg" alt="feedback" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/feedback/feedback-11.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-11.jpg" alt="feedback" class="img-fluid abt-image" />
                   </div>
                   <div>
-                    <img src="/images/feedback/feedback-12.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="/images/feedback/feedback-12.jpg" alt="feedback" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="/images/feedback/feedback-13.jpg" alt="feedback" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="/images/feedback/feedback-14.jpg" alt="feedback" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="/images/feedback/feedback-15.jpg" alt="feedback" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="/images/feedback/feedback-16.jpg" alt="feedback" class="img-fluid abt-image" />
+                  </div>
+                  <div>
+                    <img src="/images/feedback/feedback-17.jpg" alt="feedback" class="img-fluid abt-image" />
                   </div>
                </div>
                <!-- //owl-carousel -->
