--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот', экскурсии, путешевствия, походы, мастер-классы, дегустации" />
-    <meta name="description" content="Туры выходного дня 'Новый поворот' | тел.: +380985771579, +380506702264, почта: dovgalyv@ukr.net | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации">
+    <meta name="description" content="Туры выходного дня 'Новый поворот' | тел.: +380985771579, +380506702264, mail: dovgalyv@ukr.net | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации">
     
     <!-- Open Graph data-->
     <meta property="og:title" content="Туры выходного дня 'Новый поворот'">
