--- a/page-Odessa-on-march.html
+++ b/page-Odessa-on-march.html
@@ -138,6 +138,8 @@
                         <ul class="social_section_1info mt-1 mb-1">
                             <li class="mb-2 facebook"><a href="https://www.facebook.com/284598912231286/"><span
                                         class="fa fa-facebook"></span></a></li>
+                            <li class="mb-2 vk"><a href="https://vk.com/id82718471"><span
+                                        class="fa fa-vk"></span></a></li>
                             <li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span
                                         class="fa fa-instagram"></span></a></li>
                             <li class="viber">
@@ -313,6 +315,8 @@
                         <ul class="social_section_1info">
                             <li class="mb-2 facebook"><a href="https://www.facebook.com/284598912231286/"><span
                                         class="fa fa-facebook"></span></a></li>
+                            <li class="mb-2 vk"><a href="https://vk.com/id82718471"><span
+                                        class="fa fa-vk"></span></a></li>
                             <li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span
                                         class="fa fa-instagram"></span></a></li>
                             <li class="viber">
