--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             window.scrollTo(0, 1);
         }
     </script>
+    
+    <!-- canonical link -->
+    <link rel="canonical" href="https://novipovorot.pp.ua/index.html"/>
+    <!-- //canonical link -->
 
     <!--favicon.ico-->
     <link rel="shortcut icon" href="./images/map-signs-solid.svg" />
