--- a/index.html
+++ b/index.html
@@ -65,6 +65,19 @@
       gtag('config', 'G-72C579RZGG');
     </script>
 
+<!-- DDF Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170471718-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170471718-1');
+</script>
+
+
+
 </head>
 
 <body>
