--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     </p>
                 </div>
                 <div class="col-lg-6 about-right text-lg-right mt-lg-0 mt-5">
-                    <img src="images/novi-povorot.jpg" alt="" class="img-fluid abt-image" />
+                    <img src="images/novi-povorot.jpg" alt="logo" class="img-fluid abt-image" />
                 </div>
             </div>
             <div class="row mt-5 text-center">
@@ -320,7 +320,7 @@
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Turkey.html">
-                            <img src="images/Turkey-mini.jpg" alt="" class="img-fluid" />
+                            <img src="images/Turkey-mini.jpg" alt="Turkey" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>190$</span></p>
                     </div>
@@ -341,7 +341,7 @@
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">
-                            <img src="images/Odessa-mini.jpg" alt="" class="img-fluid" />
+                            <img src="images/Odessa-mini.jpg" alt="Odessa" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>2100грн.</span></p>
                     </div>
