--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                     <h4 class="destination mb-3">Пиво</h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-Beer.html">
-                            <img src="images/beer-max.jpg" class="img-fluid" alt="">
+                            <img src="images/beer-max.jpg" class="img-fluid" alt="Beer">
                         </a>
                         <div class="rating">
                             <ul>
@@ -485,7 +485,7 @@
                     <h4 class="destination mb-3">Турция</h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-Turkey.html">
-                            <img src="images/Turkey-max.jpg" class="img-fluid" alt="">
+                            <img src="images/Turkey-max.jpg" class="img-fluid" alt="Turkey">
                         </a>
                         <div class="rating">
                             <ul>
