--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Turkey.html"> Походы по Турции</a>
                         </h5>
-                        <p class="">Мраморное и Средиземное море, горы Улудаг, Ликийская тропа...</p>
+                        <p class="">Мраморное и Средиземное море..</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>8 Дней</span></li>
                         </ul>
