--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" manifest="manifest.cache">
 
 <head>
     <title>Контакты | Новый поворот</title>
