--- a/page-Beer.html
+++ b/page-Beer.html
@@ -1,6 +1,6 @@
 <!-- Пиво -->
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" manifest="manifest.cache">
 
 <head>
     <title>Пиво | Новый поворот | Экскурсия и дегустация в частную пивоварню </title>
